--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,16 +10,18 @@
   --para-ff: "League Spartan", sans-serif;
   --misc-ff: "DM Serif Display", serif;
 
-  --h1-fs-mobile: 32px;
-  --h2-fs-mobile: 24px;
-  --h3-fs-mobile: 20px;
-  --para-fs-mobile: 16px;
+  --h1-fs-mobile: 2rem;
+  --h2-fs-mobile: 1.5rem;
+  --h3-fs-mobile: 1.25rem;
+  --para-fs-mobile: 1rem;
 
-  --container-padding: 16px;
+  --container-padding: 0 16px;
   --container-margin: 0 auto;
 
   --box-shadow: 0 0 2rem -1rem rgba(0, 0, 0, 0.2);
   --box-shadow--small: 0 0 0.5rem -0.25rem rgba(0, 0, 0, 0.2);
+
+  --gradient-primary: linear-gradient(to top left, #201ca0, var(--accent-clr));
 }
 
 body {
@@ -74,6 +76,12 @@ img {
   padding: var(--container-padding);
 }
 
+.section {
+  padding: 15rem 0;
+  border-top: 1px solid var(--light-grey-clr);
+  transition: transform 1s, opacity 1s;
+}
+
 .btn {
   padding: 0.5rem 1rem;
   display: inline-block;
@@ -102,46 +110,167 @@ img {
   border: 1px solid var(--accent-clr);
 }
 
-/***** Mobile Styles *****/
+/***** Desktop Styles *****/
+/* Navigation */
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 5rem;
+  width: 100%;
+  z-index: 100;
+}
+
+.nav.sticky {
+  height: 4.5rem;
+}
+
+.nav__logo {
+  transition: all 0.3s;
+  font-size: 1.75rem;
+}
+
+.nav__links {
+  display: flex;
+  align-items: center;
+}
+
+.nav__item {
+  margin-left: 2rem;
+}
+
+.nav__link:link,
+.nav__link:visited {
+  font-size: 1.25rem;
+  font-weight: 500;
+  transition: all 0.3s;
+}
+
+.nav__link--btn:link,
+.nav__link--btn:visited {
+  padding: 0.5rem 0.75rem;
+  display: inline-block;
+  background: var(--accent-clr);
+  color: var(--light-clr);
+  border: 1px solid var(--accent-clr);
+  cursor: pointer;
+  border-radius: 0.25rem;
+}
+
+.nav__link--btn:hover,
+.nav__link--btn:active {
+  color: inherit;
+  background-color: var(--light-clr);
+  color: var(--accent-clr);
+}
+
+/* Header */
 .header {
-  /* padding: 0 3rem; */
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.header__img {
-  width: 100%;
+.header__title {
+  flex: 1;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 3rem;
+  align-content: center;
+  justify-content: center;
+
+  align-items: center;
+  justify-items: start;
 }
+
+.header-role {
+  margin-bottom: 0;
+  color: var(--accent-clr);
+  font-weight: 500;
+  font-size: 1.25rem;
+  text-transform: uppercase;
+}
+
+.header-description {
+  margin-bottom: 2rem;
+  font-size: 1.5rem;
+}
+
+.highlight {
+  position: relative;
+}
+
+.highlight::after {
+  display: block;
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: 0.7;
+  transform: scale(1.05, 0.75) skewX(-5deg);
+  background-image: var(--gradient-primary);
+}
+
+.header__img {
+  vertical-align: middle;
+  -webkit-mask-image: linear-gradient(180deg, #000 50%, transparent);
+}
+
+/* .toggle-button {
+  position: absolute;
+  top: 0.75rem;
+  right: 1rem;
+  width: 30px;
+  height: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.toggle-button .bar {
+  height: 3px;
+  width: 100%;
+  background-color: var(--accent-clr);
+} */
 
 /***** Small Tablets Styles *****/
 @media screen and (min-width: 620px) {
   :root {
-    --container-padding: 30px;
-    --h1-fs-mobile: 48px;
-    --h2-fs-mobile: 36px;
-    --h3-fs-mobile: 28px;
-    --para-fs-mobile: 20px;
+    --container-padding: 0 30px;
+    --h1-fs-mobile: 3rem;
+    --h2-fs-mobile: 2rem;
+    --h3-fs-mobile: 1.75rem;
+    --para-fs-mobile: 1.25rem;
   }
 
   .container {
     max-width: 600px;
+  }
+
+  .toggle-button {
+    display: none;
   }
 }
 
 /***** Large Tablets and Laptops Styles *****/
 @media screen and (min-width: 960px) {
   :root {
-    --container-padding: 50px;
-    --h1-fs-mobile: 64px;
-    --h2-fs-mobile: 48px;
-    --h3-fs-mobile: 36px;
-    --para-fs-mobile: 24px;
+    --container-padding: 0 50px;
+    --h1-fs-mobile: 4rem;
+    --h2-fs-mobile: 3rem;
+    --h3-fs-mobile: 2rem;
   }
 
   .container {
     max-width: 960px;
+  }
+
+  .toggle-button {
+    display: none;
   }
 }
 
